UI Enhancements and tests